# lk

./: .bzrignore  .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  Mfcommon  README  README.md  _common.h  _cset.c  _cset.h  _list.c  _list.h  _memory.c  _memory.h  _number.c  _number.h  _set.c  _set.h  _string.c  _string.h  bool.c  bool.h  buffer.c  buffer.h  buildlibs.lk  char.c  char.h  charset.c  charset.h  conf.lk  config.lk  cset.c  cset.h  dict.c  dict.h  dir.c  (+71 more)
.ai/: build.md  code.md
.claude/: settings.json
base/: array.c  array.h  charset.c  charset.h  common.h  cset.c  cset.h  darray.c  darray.h  list.c  list.h  mem.c  mem.h  memory.c  memory.h  num.c  num.h  number.c  number.h  qphash.c  qphash.h  set.c  set.h  string.c  string.h
editors/link.tmbundle/: info.plist
editors/link.tmbundle/Syntaxes/: link.tmLanguage
etc/: calendar.lk  file.lk  lk.vim  rx.lk  string.lk  table.lk
etc/ext/: extex.c  extex.lk
etc/shootout/: objinst.lk
etc/socket/: server.lk
example/: bt.lk  buffer.lk  calendar.lk  csv.lk  datetime.lk  duration.lk  echo.lk  fork.lk  string.lk  table.lk
example/ext/: Makefile  extex.c
example/shootout/: ackermann.lk  fib.lk  objinst.lk
example/socket/: client.lk  server.lk
exe/: lk.c  lk_mini.c
extra/: bt.lk  buffer.lk  calendar.lk  csv.lk  datetime.lk  duration.lk  echo.lk  error.lk  file.lk  fork.lk  lk.vim  rx.lk  string.lk  table.lk
extra/ext/: extex.h  extex.lk
extra/lib/: config.lk  mysql.c  postgres.c
extra/shootout/: objinst.lk
extra/socket/: client.lk  server.lk
include/: bool.h  char.h  charset.h  cptr.h  dir.h  dl.h  env.h  err.h  file.h  func.h  gc.h  instr.h  lib.h  list.h  map.h  num.h  obj.h  parser.h  pipe.h  rand.h  scope.h  seq.h  socket.h  str.h  tag.h  types.h  vec.h  view.h  vm.h
include/base/: charset.h  common.h  darray.h  num.h  qphash.h
lib/: Init.lk  LibraryBuilder.lk  docgen.lk  lk.lk
lib/MySQL/: blueprint.lk  mysql.c  mysql.h
optional/: Makefile  config.lk  mysql.h  postgres.c  postgres.h  regex.c  regex.h
src/: bool.c  char.c  charset.c  cptr.c  dir.c  dl.c  env.c  err.c  file.c  func.c  gc.c  instr.c  list.c  main.c  map.c  num.c  obj.c  parser.c  pipe.c  rand.c  scope.c  seq.c  socket.c  str.c  tag.c  vec.c  view.c  vm.c
src/base/: charset.c  darray.c  mem.c  num.c  qphash.c
src/rt/: charset.c  charset.h  common.h  darray.c  darray.h  ht.c  ht.h  mem.c  mem.h  num.c  num.h  qphash.c  qphash.h  vec.c  vec.h
stdlib/: Init.lk  LibraryBuilder.lk  docgen.lk
stdlib/MySQL/: blueprint.lk  init.lk  mysql.h
test/: boolean.lk  closure.lk  comparable.lk  cset.lk  dictionary.lk  enumerable.lk  function.lk  inheritance.lk  list.lk  number.lk  object.lk  on-assign.lk  random.lk  string.lk  tester.lk  unary.lk
tests/: boolean.lk  closure.lk  comparable.lk  cset.lk  dictionary.lk  function.lk  list.lk  object.lk  string.lk  tester.lk  unary.lk
tests/lang/: as.lk  cset.lk  dictionary.lk  enumerable.lk  inheritance.lk  list.lk  number.lk  on-assign.lk  random.lk  slot.lk
tests/unit/: mem_test.c
tests/unit/rt/: ht_test.c  mem_test.c  num_test.c  vec_test.c
